--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ img.resize{
     background-size: cover;
     background-position: right;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
